<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_mainss"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">

    <!--android:animateLayoutChanges="true"-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/main_turma"
                android:textColor="@color/CisterColor"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:id="@+id/textViewTurma2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:onClick="spinnerbutton"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_aulas"
                android:textColor="@color/CisterColor"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="100">


            <TextView
                android:id="@+id/textViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:background="@drawable/cell"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/main_data"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewLocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:background="@drawable/cell"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/main_local"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/textViewBalneário"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:background="@drawable/cell"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/main_balnearios"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/linear_addviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>
</LinearLayout>
